--- a/compass.css
+++ b/compass.css
@@ -24,38 +24,11 @@
     border-bottom: 3px solid #f0a859;
 }
 @media (min-width: 767px) {
-    .logo1{
-        background-image: url(1a.png);
-        background-size: auto 100%,auto 100%;
-        background-repeat: no-repeat;
-        background-position: left bottom, right bottom;
-        background-color: RGB(15,25,57);
-        width: 100%;
-        height: 100%;
-    }
     .logo2{
-        background-image: url(1b.png);
-        background-size: auto 100%,auto 100%;
-        background-repeat: no-repeat;
-        background-position: left bottom, right bottom;
-        background-color: RGB(15,25,57);
-        width: 100%;
-        height: 100%;
-    }
-    .l1{
-        height: 100%;
-        width: 25%;
-    }
-    .l2{
-        height: 100%;
-        width: 20%;
-    }
-    .navbar-header .l1{
-        height: 100%;
-    }
-    .navbar-header .l2{
-        height: 100%;
-    }
+        position: relative; 
+        left: 0px;
+        float: right;
+   }
 }
 /****************************NAV Bar*******************************/
 
