--- a/IndustryCompass.css
+++ b/IndustryCompass.css
@@ -170,6 +170,7 @@ padding: 0px;
 width: 16.5% !important;
 }
 #QV-2-9c .qv-pt .cell.header.left .value {
+  font-size: 12px;
 text-align: end !important;
 }
 
