--- a/IndustryCompass.css
+++ b/IndustryCompass.css
@@ -54,10 +54,10 @@
 .filter {
   padding: 0;
 }
-.filter-container {
+/*.filter-container {
   padding: 0;
   margin: 0 22px;
-}
+}*/
 @media (min-width: 992px) {
   .filter-container {
     position: absolute;
